src/test/resources/regression/verification/xlang/error/Array1.scala
/* Copyright 2009-2014 EPFL, Lausanne */

object Array1 {

  def foo(): Int = {
    (Array.fill(5)(5))(2) = 3
    0
  }

}
